# OpenRTX

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  REUSE.toml  meson.build  meson_options.txt  requirements.txt
lib/: CMakeLists.txt
openrtx/: CMakeLists.txt
openrtx/include/calibration/: calibInfo_CS7000.h  calibInfo_GDx.h  calibInfo_MDx.h  calibInfo_Mod17.h
openrtx/include/core/: audio_path.h  audio_stream.h  backup.h  battery.h  beeps.h  chan.h  cps.h  datetime.h  dsp.h  event.h  gps.h  graphics.h  input.h  nvm_slice_manager.h  nvmem_access.h  queue.h  settings.h  settings_manager.hpp  state.h  threads.h  ui.h  voicePromptUtils.h  voicePrompts.h
openrtx/include/fonts/adafruit/: FreeSans10pt7b.h  FreeSans12pt7b.h  FreeSans16pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans6pt7b.h  FreeSans8pt7b.h  FreeSans9pt7b.h  TomThumb.h  UbuntuRegular10pt7b.h  UbuntuRegular12pt7b.h  UbuntuRegular16pt7b.h  (+6 more)
openrtx/include/interfaces/: audio.h  keyboard.h  nvmem.h  platform.h
openrtx/include/peripherals/: adc.h  gpio.h  i2c.h  spi.h
openrtx/include/rtx/: OpMode.hpp  OpMode_M17.hpp  SmsTxPacket.hpp  rtx.h
openrtx/include/ui/: ArrowInputControl.h  EnglishStrings.h  InputControl.h  Screen.h  ScreenManager.h  SpanishStrings.h  T9InputControl.h  TextInputControl.h  UIContext.h  ui_default.h  ui_input.h  ui_mod17.h  ui_strings.h  utils.h
openrtx/src/: main.c  voiceprompts.vpc
openrtx/src/core/: audio_codec.c  audio_path.cpp  audio_stream.c  backup.c  battery.c  chan.c  cps.c  crc.c  data_conversion.c  datetime.c  dsp.cpp  gps.c  graphics.c  input.c  nvm_slice_manager.cpp  nvmem_access.c  openrtx.c  queue.c  settings_manager.cpp  state.c  threads.c  utils.c  voicePromptUtils.c  voicePrompts.c  xmodem.c
openrtx/src/locale/: OpenRTX.pot  cs.po  de.po  en_US.po  es.po  fr.po  it_IT.po  ja.po  ko.po  mk.po  nl.po  pl_PL.po  pt_BR.po  sv.po  th.po  uk_UA.po  zh_Hans.po
openrtx/src/rtx/: OpMode_FM.cpp  OpMode_M17.cpp  SmsTxPacket.cpp  rtx.cpp
platform/: CMakeLists.txt
platform/drivers/ADC/: ADC0_GDx.c  adc_stm32.h  adc_stm32f4.c  adc_stm32h7.c
platform/drivers/CPS/: cps_data_GDx.h  cps_data_MD3x0.h  cps_data_MDUV3x0.h  cps_io_libc.c  cps_io_native_GDx.c  cps_io_native_MD3x0.c  cps_io_native_MD9600.c  cps_io_native_MDUV3x0.c  cps_io_native_Mod17.c
platform/drivers/GPIO/: gpio_mk22.c  gpio_mk22.h  gpio_shiftReg.c  gpio_shiftReg.h  gpio_stm32.c  gpio_stm32.h
platform/drivers/GPS/: gps_linux.c  gps_stm32.cpp  gps_zephyr.c  nmea_rbuf.c  nmea_rbuf.h
platform/drivers/NVM/: AT24Cx.h  AT24Cx_GDx.c  W25Qx.c  W25Qx.h  eeep.c  eeep.h  flash_zephyr.c  flash_zephyr.h  nvmem_CS7000.c  nvmem_GDx.c  nvmem_MDx.c  nvmem_Mod17.c  nvmem_linux.c  nvmem_settings_MDx.c  nvmem_ttwrplus.c  posix_file.c  posix_file.h
platform/drivers/SPI/: spi_bitbang.c  spi_bitbang.h  spi_custom.c  spi_custom.h  spi_mk22.c  spi_mk22.h  spi_stm32.h  spi_stm32f4.c  spi_stm32h7.c
platform/drivers/USB/: usb_MDx.cpp  usb_descriptors.c
platform/drivers/audio/: Cx000_dac.cpp  Cx000_dac.h  MAX9814_Mod17.cpp  audio_CS7000.cpp  audio_GDx.c  audio_MDx.cpp  audio_Mod17.c  audio_linux.c  audio_ttwrplus.c  discard_sink.c  discard_sink.h  file_sink.c  file_sink.h  file_source.c  file_source.h  pulse_sink.c  pulse_sink.h  pulse_source.c  pulse_source.h  stm32_adc.cpp  stm32_adc.h  stm32_dac.cpp  stm32_dac.h  stm32_pwm.cpp  stm32_pwm.h
platform/drivers/backlight/: backlight.h  backlight_CS7000.c  backlight_GDx.c  backlight_MDx.c
platform/drivers/baseband/: AK2365A.c  AK2365A.h  AT1846S.h  AT1846S_GDx.cpp  AT1846S_SA8x8.cpp  AT1846S_UV3x0.cpp  HR_C5000.h  HR_C5000_MDx.cpp  HR_C6000.cpp  HR_C6000.h  HR_C6000_CS7000.cpp  HR_C6000_GDx.cpp  HR_C6000_UV3x0.cpp  HR_Cx000.cpp  HR_Cx000.h  MCP4551.c  SA8x8.c  SKY72310.c  SKY72310.h  radioUtils.h  radio_CS7000.cpp  radio_GDx.cpp  radio_MD3x0.cpp  radio_MD9600.cpp  radio_Mod17.cpp  radio_UV3x0.cpp  radio_linux.cpp  radio_ttwrplus.cpp
platform/drivers/chSelector/: chSelector_MD9600.c  chSelector_UV3x0.c
platform/drivers/display/: HX8353_MD3x.cpp  SH1106_ttwrplus.c  SH110x_Mod17.c  SSD1306_Mod17.c  SSD1309_Mod17.c  ST7567_MD9600.c  ST7735R_CS7000.c  UC1701_GDx.c  display_Mod17.c  display_libSDL.c
platform/drivers/keyboard/: cap1206.c  cap1206.h  cap1206_regs.h  keyboard_CS7000.c  keyboard_DM1701.c  keyboard_GDx.c  keyboard_MD3x.c  keyboard_MD9600.c  keyboard_Mod17.c  keyboard_linux.c  keyboard_ttwrplus.c
platform/drivers/stubs/: audio_stub.c  cps_io_stub.c  display_stub.c  inputStream_stub.c  keyboard_stub.c  nvmem_stub.c  outputStream_stub.c  radio_stub.c
platform/drivers/tones/: toneGenerator_MDx.cpp  toneGenerator_MDx.h
platform/targets/CS7000/: hwconfig.c  hwconfig.h  pinmap.h  platform.c
platform/targets/CS7000-PLUS/: hwconfig.c  hwconfig.h  pinmap.h  platform.c
platform/targets/DM-1701/: hwconfig.c  hwconfig.h  pinmap.h  platform.c
platform/targets/GDx/: hwconfig.c  pinmap_DM1801.h  pinmap_GD77.h  platform.c
platform/targets/MD-3x0/: hwconfig.c  hwconfig.h  pinmap.h  platform.c
platform/targets/MD-9600/: hwconfig.c  hwconfig.h  pinmap.h  platform.c
platform/targets/MD-UV3x0/: hwconfig.c  hwconfig.h  pinmap.h  platform.c
platform/targets/Module17/: hwconfig.h  pinmap.h  platform.c
platform/targets/linux/: hwconfig.h  platform.c
platform/targets/ttwrplus/: CMakeLists.txt  hwconfig.h  platform.c  pmu.cpp
subprojects/: .clang-tidy  CMakeLists.txt
tests/: CMakeLists.txt
tests/e2e/: run_e2e.sh
tests/platform/: boot_test.c  calib_read.c  codec2_encode_test.c  display_test.c  gimmi_ridimmi.c  gpio_demo.c  keyboard_test.c  mic_test.c  nvm_dump.c  platform_test.c  tonegen.c
tests/unit/: M17_demodulator.cpp  M17_golay.cpp  M17_metatext.cpp  M17_packet.cpp  M17_packet_disassembly.cpp  M17_packet_frame.cpp  M17_packet_framing.cpp  M17_rrc.cpp  M17_sms_tx.cpp  M17_viterbi.cpp  T9InputControl.cpp  T9_test.cpp  convert_minmea_coord.c  cps.c  dummy.c  linux_inputStream_test.cpp  play_sine.c  pulse_audio_drivers.cpp  ui_check_standby.c  ui_check_standby.cpp  ui_common.c  voice_prompts.c
(+79 files in other folders)
